required carbon for dates in calendar

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "tightenco/collect": "^8.19"
+        "tightenco/collect": "^8.19",
+        "nesbot/carbon": "^2.43"
     },
     "autoload": {
         "psr-4": { "Calendar\\": "src/" },
