--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
             "email": "rafaclasses@gmail.com"
         }
     ],
+    "prefer-stable": true,
+    "minimum-stability": "dev",
     "require": {
+        "php": "^7.2 || ^8.0",
         "tightenco/collect": "^8.19",
         "nesbot/carbon": "^2.43"
     },
