--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,21 @@
     "prefer-stable": true,
     "minimum-stability": "dev",
     "require": {
-        "php": "^8.0",
-        "tightenco/collect": "^8.19",
-        "nesbot/carbon": "^2.43"
+        "php": "^8.2",
+        "illuminate/collections": "^11.0",
+        "nesbot/carbon": "^3.0"
     },
     "autoload": {
-        "psr-4": { "Calendar\\": "src/" },
+        "psr-4": {
+            "Calendar\\": "src/"
+        },
         "classmap": [
             "src"
         ]
     },
     "require-dev": {
-        "phpunit/phpunit": "9.5",
-        "squizlabs/php_codesniffer": "3.*",
+        "phpunit/phpunit": "^11.0",
+        "squizlabs/php_codesniffer": "^3.11",
         "jetbrains/phpstorm-attributes": "^1.0"
     }
 }
