--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     "prefer-stable": true,
     "minimum-stability": "dev",
     "require": {
-        "php": "^8.2",
-        "illuminate/collections": "^11.0",
-        "nesbot/carbon": "^3.0"
+        "php": "^8.3 || ^8.4",
+        "nesbot/carbon": "^2.43 || ^3.0",
+        "illuminate/collections": "^11.0 || ^12.0"
     },
     "autoload": {
         "psr-4": {
